Fix: Make Video Editing visible on mobile, remove career gaps, and disable TechStack on mobile

--- a/src/components/styles/Career.css
+++ b/src/components/styles/Career.css
@@ -160,10 +160,19 @@
 }
 @media only screen and (max-width: 1025px) {
   .career-section {
-    padding: 70px 0px;
-    padding-top: 220px;
-    margin-top: -200px;
+    padding: 40px 0px;
+    margin-top: 0px;
     margin-bottom: 0;
+  }
+  .career-section h2 {
+    margin-bottom: 30px;
+  }
+  .career-timeline {
+    max-height: 100% !important;
+    opacity: 1 !important;
+  }
+  .career-info-box {
+    opacity: 1 !important;
   }
 }
 @media only screen and (max-width: 900px) {
@@ -194,6 +203,7 @@
     font-size: 45px;
     line-height: 45px;
     margin-top: 0px;
+    margin-bottom: 30px;
   }
   .career-info-in {
     gap: 0px;
@@ -206,9 +216,8 @@
     padding-left: 5%;
   }
   .career-section {
-    padding-top: 90px;
-    margin-top: -70px;
-
+    padding: 40px 0px;
+    margin-top: 0px;
     align-items: start;
     place-items: inherit;
     justify-content: left;
