--- a/src/components/styles/WhatIDo.css
+++ b/src/components/styles/WhatIDo.css
@@ -285,60 +285,47 @@
 }
 @media only screen and (max-width: 1024px) {
   .whatIDO {
+    flex-direction: column;
     height: auto;
     padding: 50px 0px;
     padding-bottom: 50px;
-  }
-  .what-box-in {
-    height: 500px;
-    margin-left: -50px;
-  }
-  .what-content {
-    padding: 50px;
-    width: 500px;
-  }
-  .what-content p {
-    font-size: 14px;
-  }
-  .what-noTouch:hover,
-  .what-content-active {
-    min-height: 67%;
-    padding: 50px;
-  }
-
-  .what-noTouch:hover ~ .what-content,
-  .what-box-in:hover .what-noTouch:not(:hover),
-  .what-content.what-sibling {
-    min-height: 33%;
-    padding: 10px 50px;
-  }
-}
-@media only screen and (max-width: 900px) {
-  .whatIDO {
-    flex-direction: column;
-  }
-  .what-box h2 {
-    margin: 50px 0;
-    font-size: 55px;
-    line-height: 53px;
-  }
-  .what-box:first-child {
-    justify-content: left;
-  }
-  .what-box:last-child {
-    height: 500px;
+    align-items: center;
+    justify-content: center;
   }
   .what-box {
     width: 500px;
     max-width: calc(100% - 50px);
     margin: auto;
   }
-  .what-content {
+  .what-box h2 {
+    margin: 50px 0 30px 0;
+    font-size: 55px;
+    line-height: 53px;
+    text-align: center;
+  }
+  .what-box:first-child {
+    justify-content: center;
     width: 100%;
   }
+  .what-box:last-child {
+    height: auto;
+    width: 100%;
+    max-width: 500px;
+    margin: 0 auto;
+  }
   .what-box-in {
+    display: flex !important;
+    flex-direction: column;
     margin-left: 0px;
     height: 450px;
+    width: 100%;
+  }
+  .what-content {
+    width: 100%;
+    padding: 30px;
+  }
+  .what-content p {
+    font-size: 11px;
   }
   .what-content h5,
   .what-content-flex {
@@ -350,12 +337,6 @@
   .what-noTouch:hover .what-content-flex,
   .what-content-active .what-content-flex {
     opacity: 1;
-  }
-  .what-content {
-    padding: 30px;
-  }
-  .what-content p {
-    font-size: 11px;
   }
   .what-noTouch:hover,
   .what-content-active {
@@ -374,6 +355,7 @@
     font-size: 25px;
   }
 }
+
 @media only screen and (max-width: 550px) {
   .whatIDO {
     place-items: inherit;
